--- a/app/src/main/res/layout/activity_tambah_siswa.xml
+++ b/app/src/main/res/layout/activity_tambah_siswa.xml
@@ -5,6 +5,15 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Tambah Siswa"
+        android:textColor="#90c40909"
+        android:textSize="33dp"
+        android:textStyle="bold" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/full_name"
         android:layout_width="fill_parent"
