--- a/app/src/main/res/layout/activity_tambah_siswa.xml
+++ b/app/src/main/res/layout/activity_tambah_siswa.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:background="#FFFFFF">
 
-    <TextView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool_bar"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Tambah Siswa"
-        android:textColor="#90c40909"
-        android:textSize="33dp"
-        android:textStyle="bold" />
+        android:background="@color/colorPrimary"
+        android:elevation="7dp" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/full_name"
@@ -171,9 +175,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="#b45705"
+        android:background="@color/colorButton"
         android:text="Tambah"
         android:textColor="#fff" />
 
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
-</ScrollView>
