--- a/app/src/main/res/layout/activity_beranda_guru.xml
+++ b/app/src/main/res/layout/activity_beranda_guru.xml
@@ -38,11 +38,12 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/add_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add"/>
+        android:src="@drawable/ic_create"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
