--- a/app/src/main/res/layout/activity_tambah_siswa.xml
+++ b/app/src/main/res/layout/activity_tambah_siswa.xml
@@ -96,13 +96,13 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Male"
+                android:text="Laki-laki"
                 android:id="@+id/radioButton"
                 android:checked="false" />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Female"
+                android:text="Perempuan"
                 android:id="@+id/radioButton2"
                 android:checked="false" />
         </RadioGroup>
