splash dan welcome activitym cuma welcomenya masih anta

--- a/app/src/main/res/layout/adapter_beranda_guru.xml
+++ b/app/src/main/res/layout/adapter_beranda_guru.xml
@@ -85,9 +85,26 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/love"
         android:id="@+id/comment"
+        android:layout_marginLeft="50px"
         android:layout_below="@id/hastag_beranda"
         android:src="@drawable/ic_comment"
         android:layout_marginTop="5dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/comment"
+        android:id="@+id/liker"
+        android:layout_marginLeft="20px"
+        android:text="1 Suka"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/comment"
+        android:layout_toRightOf="@+id/liker"
+        android:layout_marginLeft="20px"
+        android:text="5 Komentar"
         />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
